[package]
name = "derive_deref"
version = "1.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Adds `#[derive(Deref)]` and `#[derive(DerefMut)]`"
readme = "README.md"
keywords = ["derive", "deref"]
repository = "https://github.com/sgrif/derive_deref"

[dependencies]
syn = "1.0.13"
quote = "1.0.2"
proc-macro2 = "1.0.5"

[lib]
proc-macro = true
