[package]
name = "derive_deref"
version = "1.1.1"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Adds `#[derive(Deref)]` and `#[derive(DerefMut)]`"
readme = "README.md"
keywords = ["derive", "deref"]
repository = "https://github.com/sgrif/derive_deref"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
